[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"

[workspace.package]
name = "mevboost-blocks"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chainbound"]
exclude = ["**/target", "benches/", "tests"]

[workspace.dependencies]
anyhow = "1.0.75"
inquire = "0.6.2"
tracing = "0.1.40"
serde_json = "1.0.108"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.192", features = ["derive"] }
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true
