[package]
name = "mevboost-relay-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true

lazy_static = "1.4.0"
reqwest = "0.11.22"
serde-aux = "4.2.0"
chrono = "0.4.31"
